--- a/css/UNC.css
+++ b/css/UNC.css
@@ -10,9 +10,9 @@
 }
 :root
 {
-  --UNC-Blue:#013c65;
-  --UNC-Gold: #f6b000;
-  --UNC-Gray: #60697a;
+  --UNC-Blue:#0ca3e9;
+  --UNC-Gold: #000000;
+  --UNC-Gray: #7c7575;
 }
 *
 {
@@ -23,4 +23,21 @@ h1, h2, h3, h4, h5, h6
 {
     font-family: UNCTitle;
     color: var(--UNC-Blue);
+    font-size: 35px;
+    font-family: cursive;
 }
+@keyframes spin {
+  from {
+    transform: rotateY(0);
+  }
+  to {
+    transform: rotateY(1turn);
+  }
+h1 {
+  animation: spin 5s ease;
+  animation-iteration-count: infinite;
+}
+
+h1 {
+  perspective: 1000px;
+} 
